--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <section class="noticia">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
         <img src="/imagenes/IAimg.jpg" alt="Imagen de la noticia">
+        <!--
+        <img src="https://github.com/M-1985-web/webSiteNoticias/blob/master/imagenes/IAimg.jpg" alt="Imagen de la
+        noticia">
+        -->
         <p>En un emocionante desarrollo en el campo de la tecnología, los científicos e ingenieros de todo el mundo están logrando avances significativos en el campo de la inteligencia artificial (IA). Estos avances están dando forma al futuro de la IA y prometen transformar nuestra vida cotidiana en diversas formas.</p>
         <a href="noticia1.html">Leer más</a>
     </section>
