--- a/noticia1.html
+++ b/noticia1.html
@@ -13,7 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="noticia1.html">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</a></li>
+                <li><a href="noticia1.html">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para
+                        el Futuro"</a></li>
                 <!-- Agrega más enlaces a otras noticias aquí -->
             </ul>
         </nav>
@@ -25,17 +26,42 @@
     <article class="noticia">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
         <img src="/imagenes/IAimg2.jpg" alt="Imagen de la noticia">
-        <p>La inteligencia <span>artificial (IA)</span> es un campo de la informática que se ha desarrollado a lo largo de décadas, marcado por hitos significativos que han llevado a avances revolucionarios en la tecnología. A continuación, se destacan algunos de los momentos clave en la historia de la IA: Dartmouth Workshop (1956): El término "inteligencia artificial" fue acuñado por primera vez en la Conferencia de Dartmouth, donde los pioneros en el campo, como John McCarthy y Marvin Minsky, se reunieron para discutir la posibilidad de crear máquinas capaces de imitar la inteligencia humana</p>
-        <p>Uno de los últimos avances más emocionantes en el campo de la inteligencia artificial es un nuevo algoritmo de aprendizaje profundo conocido como "Redes Neuronales Transformadoras" (TNR, por sus siglas en inglés), que está demostrando superar a las redes neuronales anteriores en términos de eficiencia y precisión. Las TNR son una evolución de las redes neuronales convolucionales (CNN) y las redes neuronales recurrentes (RNN) que han sido fundamentales en la
-        visión por computadora y el procesamiento de lenguaje natural. Lo que hace que las TNR sean particularmente innovadoras es su capacidad para aprender representaciones más profundas y abstractas de los datos, lo que lleva a una mejor comprensión de la información.</p>
-        <p>En el campo de la visión por computadora, las TNR están logrando avances notables. Estas redes son capaces de reconocer objetos y patrones con una precisión sin precedentes. Por ejemplo, en aplicaciones de reconocimiento de imágenes médicas, las TNR pueden detectar anomalías con mayor exactitud, lo que es fundamental para el diagnóstico temprano de enfermedades. **Impacto en el Procesamiento de Lenguaje Natural:** En el procesamiento de lenguaje natural, las TNR están mejorando la capacidad de las máquinas para comprender y generar texto de manera más coherente y contextual. Esto se traduce en sistemas de chatbots y asistentes virtuales que pueden interactuar de manera más natural y resolver preguntas de manera más precisa.</p>
-        <p>Opinión de la Dra. María Pérhez, Científica de Datos en una Universidad de Prestigio:El procesamiento de lenguaje natural es una de las áreas en las que la inteligencia artificial ha tenido un gran avance en los últimos años. Se han desarrollado técnicas de aprendizaje profundo y algoritmos de procesamiento de lenguaje natural que permiten a las máquinas comprender y generar lenguaje humano de manera cada vez más precisa.</p>
+        <!--
+            <img src="https://github.com/M-1985-web/webSiteNoticias/blob/master/imagenes/IAimg2.jpg" alt="imagen de la noticia">
+        -->
+
+        <p>La inteligencia <span>artificial (IA)</span> es un campo de la informática que se ha desarrollado a lo largo
+            de décadas, marcado por hitos significativos que han llevado a avances revolucionarios en la tecnología. A
+            continuación, se destacan algunos de los momentos clave en la historia de la IA: Dartmouth Workshop (1956):
+            El término "inteligencia artificial" fue acuñado por primera vez en la Conferencia de Dartmouth, donde los
+            pioneros en el campo, como John McCarthy y Marvin Minsky, se reunieron para discutir la posibilidad de crear
+            máquinas capaces de imitar la inteligencia humana</p>
+        <p>Uno de los últimos avances más emocionantes en el campo de la inteligencia artificial es un nuevo algoritmo
+            de aprendizaje profundo conocido como "Redes Neuronales Transformadoras" (TNR, por sus siglas en inglés),
+            que está demostrando superar a las redes neuronales anteriores en términos de eficiencia y precisión. Las
+            TNR son una evolución de las redes neuronales convolucionales (CNN) y las redes neuronales recurrentes (RNN)
+            que han sido fundamentales en la
+            visión por computadora y el procesamiento de lenguaje natural. Lo que hace que las TNR sean particularmente
+            innovadoras es su capacidad para aprender representaciones más profundas y abstractas de los datos, lo que
+            lleva a una mejor comprensión de la información.</p>
+        <p>En el campo de la visión por computadora, las TNR están logrando avances notables. Estas redes son capaces de
+            reconocer objetos y patrones con una precisión sin precedentes. Por ejemplo, en aplicaciones de
+            reconocimiento de imágenes médicas, las TNR pueden detectar anomalías con mayor exactitud, lo que es
+            fundamental para el diagnóstico temprano de enfermedades. **Impacto en el Procesamiento de Lenguaje
+            Natural:** En el procesamiento de lenguaje natural, las TNR están mejorando la capacidad de las máquinas
+            para comprender y generar texto de manera más coherente y contextual. Esto se traduce en sistemas de
+            chatbots y asistentes virtuales que pueden interactuar de manera más natural y resolver preguntas de manera
+            más precisa.</p>
+        <p>Opinión de la Dra. María Pérhez, Científica de Datos en una Universidad de Prestigio:El procesamiento de
+            lenguaje natural es una de las áreas en las que la inteligencia artificial ha tenido un gran avance en los
+            últimos años. Se han desarrollado técnicas de aprendizaje profundo y algoritmos de procesamiento de lenguaje
+            natural que permiten a las máquinas comprender y generar lenguaje humano de manera cada vez más precisa.</p>
 
         <h3>Mirá este video en donde recrean la voz de Gustavo Cerati con IA</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/vW6vuEbiopU?si=ej8oXTQqUgvLnIB2"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe><br>
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe><br>
         <a href="index.html">Volver a la página principal</a>
     </article>
 
