--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="noticia">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
-        <img src="/imagenes/IAimg.jpg" alt="Imagen de la noticia">
+        <img src="https://drive.google.com/uc?export=view&id=1-dySDG187XuClaRAMoM2q8FiarETDdk9" alt="Imagen de la noticia">
         <!--
         <img src="https://github.com/M-1985-web/webSiteNoticias/blob/master/imagenes/IAimg.jpg" alt="Imagen de la
         noticia">
