--- a/noticia1.html
+++ b/noticia1.html
@@ -21,11 +21,11 @@
     </header>
     <div>
         <h4>Escucha este tema de Pelicula mientras lees</h4>
-        <audio src="/audio/guardi@nesDeLaGalaxy.m4a" controls></ Audio>
+        <audio src="https://drive.google.com/uc?export=view&id=1BT1yIoDMd9xs33BVkqFqMLHY6vVbz9ej" controls></ Audio>
     </div>
     <article class="noticia">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
-        <img src="/imagenes/IAimg2.jpg" alt="Imagen de la noticia">
+        <img src="https://drive.google.com/uc?export=view&id=1RIYcKRrjBreU7-J1b59_ah3kSigXddXu" alt="Imagen de la noticia">
         <!--
             <img src="https://github.com/M-1985-web/webSiteNoticias/blob/master/imagenes/IAimg2.jpg" alt="imagen de la noticia">
         -->
