se agrego 2 index mas

--- a/noticia1.html
+++ b/noticia1.html
@@ -13,9 +13,15 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="noticia1.html">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para
-                        el Futuro"</a></li>
+                <li><a href="noticia1.html">"Avances
+                        Revolucionarios en la Inteligencia Artificial:
+                        Implicaciones para el Futuro"</a></li>
                 <!-- Agrega más enlaces a otras noticias aquí -->
+                <li><a href="noticia2.html">¿Qué es la
+                        inteligencia artificial y cómo funciona?</a></ li>
+                <li><a href="noticia3.html">¿Qué beneficios y
+                        riesgos tiene la inteligencia artificial para
+                        la sociedad?</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +31,8 @@
     </div>
     <article class="noticia">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
-        <img src="https://drive.google.com/uc?export=view&id=1RIYcKRrjBreU7-J1b59_ah3kSigXddXu" alt="Imagen de la noticia">
+        <img src="https://drive.google.com/uc?export=view&id=1RIYcKRrjBreU7-J1b59_ah3kSigXddXu"
+            alt="Imagen de la noticia">
         <!--
             <img src="https://github.com/M-1985-web/webSiteNoticias/blob/master/imagenes/IAimg2.jpg" alt="imagen de la noticia">
         -->
