--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="noticia1.html">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</a></li>
                 <!-- Agrega más enlaces a otras noticias aquí -->
+                <li><a href="noticia2.html">¿Qué es la inteligencia artificial y cómo funciona?</a></li>
+                <li><a href="noticia3.html">¿Qué beneficios y riesgos tiene la inteligencia artificial para la sociedad?</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="noticia">
+    <section class="noticia1">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
         <img src="https://drive.google.com/uc?export=view&id=1-dySDG187XuClaRAMoM2q8FiarETDdk9" alt="Imagen de la noticia">
         <!--
@@ -31,6 +33,20 @@
     </section>
 
     <!-- Agrega más noticias utilizando la misma estructura -->
+    <section class="noticia2">
+        <h2>¿Qué es la inteligencia artificial y cómo funciona?</h2>
+        <img src="https://drive.google.com/uc?export=view&id=1LjKxVUD3H9q3Pp18tYsKSvh3nkjlpKf4" alt="Imagen de la 
+        noticia">
+           <p>La inteligencia artificial (IA) es la ciencia que hace que las máquinas imiten la inteligencia humana. Hay dos tipos de IA: la débil, que solo sabe hacer una cosa, y la fuerte, que puede saber y pensar de todo. La mayoría de las IA que usamos hoy son débiles, y la IA fuerte es un sueño difícil de alcanzar.</p>
+        <a href="noticia2.html">Leer más</a>
+    </section>
+
+    <section class="noticia3">
+        <h2>¿Qué beneficios y riesgos tiene la inteligencia artificial para la sociedad?</h2>
+        <img src="https://drive.google.com/uc?export=view&id=1Ufb4weP35eQT-qd2j8TcUgoxzwHgRw1g" alt="Imagen de la noticia">
+        <p>La inteligencia artificial (IA) es una tecnología que puede mejorar o dañar la sociedad. Tiene beneficios como ayudar a la gente, a las empresas y a la ciencia, pero también riesgos como afectar al trabajo, a la igualdad y a los derechos humanos. La IA puede ser una herramienta o una amenaza para la humanidad.</p>
+        <a href="noticia3.html">Leer más</a>
+    </section>
 
     <section class="formulario">
         <p><i>Contacte con Nosotros</i></p>
