--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ActualiWeb</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -24,11 +25,7 @@
     <section class="noticia1">
         <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
         <img src="https://drive.google.com/uc?export=view&id=1-dySDG187XuClaRAMoM2q8FiarETDdk9" alt="Imagen de la noticia">
-        <!--
-        <img src="https://github.com/M-1985-web/webSiteNoticias/blob/master/imagenes/IAimg.jpg" alt="Imagen de la
-        noticia">
-        -->
-        <p>En un emocionante desarrollo en el campo de la tecnología, los científicos e ingenieros de todo el mundo están logrando avances significativos en el campo de la inteligencia artificial (IA). Estos avances están dando forma al futuro de la IA y prometen transformar nuestra vida cotidiana en diversas formas.</p>
+        <p id="texto">En un emocionante desarrollo en el campo de la tecnología, los científicos e ingenieros de todo el mundo están logrando avances significativos en el campo de la inteligencia artificial (IA). Estos avances están dando forma al futuro de la IA y prometen transformar nuestra vida cotidiana en diversas formas.</p>
         <a href="noticia1.html">Leer más</a>
     </section>
 
@@ -49,7 +46,7 @@
     </section>
 
     <section class="formulario">
-        <p><i>Contacte con Nosotros</i></p>
+        <h1><i>Contacto</i></h1>
         <form action="procesar_formulario.php" method="post">
             <label for="nombre">Nombre:</label><br>
             <input type="text" id="nombre" name="nombre" required><br>
@@ -83,7 +80,6 @@
             </tr>
         </table>
     </section>
-
     <footer>
         <p>&copy; 2023 ActualiWeb</p>
     </footer>
