--- a/noticia2.html
+++ b/noticia2.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <div>
-        <h4>Escucha este tema de Pelicula mientras lees</h4>
+        <h4>Escucha el Podcast</h4>
         <audio src="https://drive.google.com/uc?export=view&id=1BT1yIoDMd9xs33BVkqFqMLHY6vVbz9ej" controls></ Audio>
     </div>
     <article class="noticia">
