--- a/noticia3.html
+++ b/noticia3.html
@@ -36,7 +36,7 @@
     <article class="noticia">
         <h2>¿Qué beneficios y riesgos tiene la inteligencia artificial para la sociedad?</h2>
         <img src="https://drive.google.com/uc?export=view&id=1bK-OKT-oA-Jizs1POKBBEIY8Mh-3iC8Q" alt="Imagen de la noticia">
-        <p><span>La inteligencia artificial (IA)</span>La inteligencia artificial (IA) tiene un gran potencial para mejorar la calidad de vida de las personas,aumentar la eficiencia y la productividad de las organizaciones, impulsar la innovación y el desarrollo científico, y resolver problemas globales como el cambio climático, la pobreza o las enfermedades. Algunos beneficios concretos de la IA son:
+        <p><span>La inteligencia artificial (IA)</span> tiene un gran potencial para mejorar la calidad de vida de las personas,aumentar la eficiencia y la productividad de las organizaciones, impulsar la innovación y el desarrollo científico, y resolver problemas globales como el cambio climático, la pobreza o las enfermedades. Algunos beneficios concretos de la IA son:
         facilitar el acceso a la educación y la salud, mejorar la seguridad y la movilidad, crear nuevas oportunidades laborales y económicas, y fomentar la inclusión y la diversidad.
         
         <p> Sin embargo, <span>la IA</span> también plantea importantes desafíos y riesgos para la sociedad, como: afectar al empleo y a las competencias de los trabajadores, generar desigualdades y brechas digitales, amenazar la privacidad y la seguridad de
