--- a/noticia1.html
+++ b/noticia1.html
@@ -35,10 +35,11 @@
         <img src="https://drive.google.com/uc?export=view&id=1RIYcKRrjBreU7-J1b59_ah3kSigXddXu"
         alt="Imagen de la noticia">
 
-        <p>La inteligencia <span>artificial (IA)</span> es un campo de la informática que se ha desarrollado a lo largo de décadas, marcado por hitos significativos que han llevado a avances revolucionarios en la tecnología. A continuación, se destacan algunos de los momentos clave en la historia de la IA: Dartmouth Workshop (1956): El término "inteligencia artificial" fue acuñado por primera vez en la Conferencia de Dartmouth, donde los
-        pioneros en el campo, como John McCarthy y Marvin Minsky, se reunieron para discutir la posibilidad de crearmáquinas capaces de imitar la inteligencia humana
+        <p><span>La inteligencia artificial (IA)</span> es un campo de la informática que se ha desarrollado a lo largo de décadas, marcado por hitos significativos que han llevado a avances revolucionarios en la tecnología. A continuación, se destacan algunos de los momentos clave en la historia de la IA: Dartmouth Workshop(1956): El término "inteligencia artificial" fue acuñado por primera vez en la Conferencia de Dartmouth, donde los
+        pioneros en el campo, como John McCarthy y Marvin Minsky, se reunieron para discutir la posibilidad de   <span>crear máquinas capaces de imitar la inteligencia humana</span>
         </p>
-        <p>Uno de los últimos avances más emocionantes en el campo de la inteligencia artificial es un nuevo algoritmode aprendizaje profundo conocido como "Redes Neuronales Transformadoras" (TNR, por sus siglas en inglés), que está demostrando superar a las redes neuronales anteriores en términos de eficiencia y precisión. Las TNR son una evolución de las redes neuronales convolucionales (CNN) y las redes neuronales recurrentes (RNN) que han sido fundamentales en la
+        <p>Uno de los últimos avances más emocionantes en el campo de la inteligencia artificial es un nuevo algoritmode aprendizaje profundo conocido como <span>
+        "Redes Neuronales Transformadoras"</span> (TNR, por sus siglas en inglés), que está demostrando superar a las redes neuronales anteriores en términos de eficiencia y precisión. Las TNR son una evolución de las redes neuronales convolucionales (CNN) y las redes neuronales recurrentes (RNN) que han sido fundamentales en la
         visión por computadora y el procesamiento de lenguaje natural. Lo que hace que las TNR sean particularmente
         innovadoras es su capacidad para aprender representaciones más profundas y abstractas de los datos, lo que lleva a una mejor comprensión de la información.</p>
         <p>En el campo de la visión por computadora, las TNR están logrando avances notables. Estas redes son capaces de reconocer objetos y patrones con una precisión sin precedentes. Por ejemplo, en aplicaciones de reconocimiento de imágenes médicas, las TNR pueden detectar anomalías con mayor exactitud, lo que es
@@ -49,7 +50,7 @@
         más precisa.</p>
         <p>Opinión de la Dra. María Pérhez, Científica de Datos en una Universidad de Prestigio:El procesamiento de
         lenguaje natural es una de las áreas en las que la inteligencia artificial ha tenido un gran avance en los
-        últimos años. Se han desarrollado técnicas de aprendizaje profundo y algoritmos de procesamiento de lenguaje natural que permiten a las máquinas comprender y generar lenguaje humano de manera cada vez más precisa.</p>
+        últimos años. <span>Se han desarrollado técnicas de aprendizaje profundo y algoritmos de procesamiento de lenguaje natural que permiten a las máquinas comprender y generar lenguaje humano de manera cada vez más precisa.</span></p>
 
         <h3>Mirá este video en donde recrean la voz de Gustavo Cerati con IA</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/vW6vuEbiopU?si=ej8oXTQqUgvLnIB2"
