--- a/index.html
+++ b/index.html
@@ -26,31 +26,32 @@
         </nav>
     </header>
 
-    <section class="noticia1">
-        <h2>"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
+    <section>
+        <h2 class="noticia">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
         <img src="https://drive.google.com/uc?export=view&id=1-dySDG187XuClaRAMoM2q8FiarETDdk9" alt="Imagen de la noticia">
         <p id="texto">En un emocionante desarrollo en el campo de la tecnología, los científicos e ingenieros de todo el mundo están logrando avances significativos en el campo de la inteligencia artificial (IA). Estos avances están dando forma al futuro de la IA y prometen transformar nuestra vida cotidiana en diversas formas.</p>
         <a href="noticia1.html">Leer más</a>
     </section>
 
     <!-- Agrega más noticias utilizando la misma estructura -->
-    <section class="noticia2">
-        <h2>¿Qué es la inteligencia artificial y cómo funciona?</h2>
+    <section>
+        <h2 class="noticia">¿Qué es la inteligencia artificial y cómo funciona?</h2>
         <img src="https://drive.google.com/uc?export=view&id=1LjKxVUD3H9q3Pp18tYsKSvh3nkjlpKf4" alt="Imagen de la 
         noticia">
            <p>La inteligencia artificial (IA) es la ciencia que hace que las máquinas imiten la inteligencia humana. Hay dos tipos de IA: la débil, que solo sabe hacer una cosa, y la fuerte, que puede saber y pensar de todo. La mayoría de las IA que usamos hoy son débiles, y la IA fuerte es un sueño difícil de alcanzar.</p>
         <a href="noticia2.html">Leer más</a>
     </section>
 
-    <section class="noticia3">
-        <h2>¿Qué beneficios y riesgos tiene la inteligencia artificial para la sociedad?</h2>
+    <section>
+        <h2 class="noticia">¿Qué beneficios y riesgos tiene la inteligencia artificial para la sociedad?</h2>
         <img src="https://drive.google.com/uc?export=view&id=1Ufb4weP35eQT-qd2j8TcUgoxzwHgRw1g" alt="Imagen de la noticia">
         <p>La inteligencia artificial (IA) es una tecnología que puede mejorar o dañar la sociedad. Tiene beneficios como ayudar a la gente, a las empresas y a la ciencia, pero también riesgos como afectar al trabajo, a la igualdad y a los derechos humanos. La IA puede ser una herramienta o una amenaza para la humanidad.</p>
         <a href="noticia3.html">Leer más</a>
     </section>
+    <br>
 
     <section class="formulario">
-        <h1><i>Contacto</i></h1>
+        <h3><i>Contacto</i></h3>
         <form action="procesar_formulario.php" method="post">
             <label for="nombre">Nombre:</label><br>
             <input type="text" id="nombre" name="nombre" required><br>
@@ -70,7 +71,7 @@
         <br>
     </div>
     <section>
-        <h1>Información de Tiempo y Hora</h1>
+        <h3><i>Información de Tiempo y Hora</i></h3>
         <table border="6">
             <tr>
                 <th>Ciudad</th>
@@ -85,7 +86,7 @@
         </table>
     </section>
     <footer>
-        <p>&copy; 2023 ActualiWeb</p>
+        <p class="noticia">&copy; 2023 ActualiWeb</p>
     </footer>
 </body>
 </html>
