--- a/noticia1.html
+++ b/noticia1.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <div>
-        <h4>Escucha el Podcast</h4>
+        <h4>Escucha el <em>Podcast</em></h4>
         <audio src="https://drive.google.com/uc?export=view&id=1VGHRpDUCKMsrpNzSDjxAIHhdcvs84DFM" controls></ Audio>
     </div>
     <article class="noticia">
@@ -60,7 +60,7 @@
         <a href="index.html">Volver a la página principal</a>
     </article>
 
-    <footer>
+    <footer class="noticia">
         <p>&copy; 2023 ActualiWeb</p>
     </footer>
 </body>
