--- a/noticia2.html
+++ b/noticia2.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <div>
-        <h4>Escucha el Podcast</h4>
+        <h4>Escucha el <em>Podcast</em></h4>
         <audio src="https://drive.google.com/uc?export=view&id=1UWcSbYNCJxlOsOa3mN3-tIpJjlwUHJ62" controls></ Audio>
     </div>
     <article class="noticia">
