estilos aplicados generales

--- a/noticia2.html
+++ b/noticia2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticia 1 - ActualiWeb</title>
+    <title>Noticia 2 - ActualiWeb</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,9 +24,8 @@
                         inteligencia artificial y cómo funciona?
                     </a></ li>
                 <li><a href="noticia3.html">¿Qué beneficios y
-                        riesgos tiene la inteligencia
-                        artificial para
-                        la sociedad?</a></li>
+                    riesgos tiene la inteligencia artificial para la sociedad?</a>
+                </li>
             </ul>
         </nav>
     </header>
