--- a/index.html
+++ b/index.html
@@ -26,25 +26,28 @@
         </nav>
     </header>
 
-    <section>
-        <h2 class="noticia">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</h2>
-        <img src="https://drive.google.com/uc?export=view&id=1-dySDG187XuClaRAMoM2q8FiarETDdk9" alt="Imagen de la noticia">
-        <p id="texto">En un emocionante desarrollo en el campo de la tecnología, los científicos e ingenieros de todo el mundo están logrando avances significativos en el campo de la inteligencia artificial (IA). Estos avances están dando forma al futuro de la IA y prometen transformar nuestra vida cotidiana en diversas formas.</p>
+
+
+
+    <section >
+        <h2 class="noticia">"Avances Revolucionarios en la <strong>Inteligencia Artificial:</strong> Implicaciones para el Futuro"</h2>
+        <img src="https://drive.google.com/uc?export=view&id=1-dySDG187XuClaRAMoM2q8FiarETDdk9" alt="Imagen de la noticia" class="box">
+        <p id="texto" >En un emocionante desarrollo en el campo de la tecnología, los científicos e ingenieros de todo el mundo están logrando avances significativos en el campo de la inteligencia artificial (IA). Estos avances están dando forma al futuro de la IA y prometen transformar nuestra vida cotidiana en diversas formas.</p>
         <a href="noticia1.html">Leer más</a>
     </section>
-
+    <br>
     <!-- Agrega más noticias utilizando la misma estructura -->
     <section>
-        <h2 class="noticia">¿Qué es la inteligencia artificial y cómo funciona?</h2>
+        <h2 class="noticia">¿Qué es la inteligencia artificial y <strong>cómo funciona?</strong></h2>
         <img src="https://drive.google.com/uc?export=view&id=1LjKxVUD3H9q3Pp18tYsKSvh3nkjlpKf4" alt="Imagen de la 
-        noticia">
+        noticia" class="box">
            <p>La inteligencia artificial (IA) es la ciencia que hace que las máquinas imiten la inteligencia humana. Hay dos tipos de IA: la débil, que solo sabe hacer una cosa, y la fuerte, que puede saber y pensar de todo. La mayoría de las IA que usamos hoy son débiles, y la IA fuerte es un sueño difícil de alcanzar.</p>
         <a href="noticia2.html">Leer más</a>
     </section>
-
+    <br>
     <section>
-        <h2 class="noticia">¿Qué beneficios y riesgos tiene la inteligencia artificial para la sociedad?</h2>
-        <img src="https://drive.google.com/uc?export=view&id=1Ufb4weP35eQT-qd2j8TcUgoxzwHgRw1g" alt="Imagen de la noticia">
+        <h2 class="noticia">¿Qué <strong>beneficios y riesgos</strong> tiene la inteligencia artificial para la sociedad?</h2>
+        <img src="https://drive.google.com/uc?export=view&id=1Ufb4weP35eQT-qd2j8TcUgoxzwHgRw1g" alt="Imagen de la noticia" class="box">
         <p>La inteligencia artificial (IA) es una tecnología que puede mejorar o dañar la sociedad. Tiene beneficios como ayudar a la gente, a las empresas y a la ciencia, pero también riesgos como afectar al trabajo, a la igualdad y a los derechos humanos. La IA puede ser una herramienta o una amenaza para la humanidad.</p>
         <a href="noticia3.html">Leer más</a>
     </section>
