modifique el inicio y agre img

--- a/index.html
+++ b/index.html
@@ -14,11 +14,37 @@
 
 <body>
     <main>
-    <header>
+
+        <!-- Sección del Title-->
+        <section class="title">
+            <div class="title__container">
+                <!-- <h2 class="title__hola">¡ActualiWeb!</h2>-->
+                <h3 class="title__soy">
+                    Es el sitio web de noticias tecnologícas que te ofrece lo último en innovación, ciencia, informática, videojuegos y
+                    más.<strong>Visita Actualiweb y descubre todo lo que la tecnología
+                    puede hacer por ti.</strong>
+                </h3>
+                <ul class="title__network">
+                    <!-- Pon los enlaces de tus redes sociales favoritas -->
+                    <li class="title__network__item"><a href="https://github.com/" target="_blank"
+                            class="title__links"><i class="fa-brands fa-github-alt"></i>GitHub </a></li>
+        
+                    <li class="title__network__item"><a href="https://www.linkedin.com/in/"
+                            target="_blank" class="title__links"><i class="fa-brands fa-linkedin-in"></i>LinkedIn</a></li>
+                </ul>
+            </div>
+            <img class="title__profile" src="https://drive.google.com/uc?export=view&id=1g4UnDt0myDONkRrQJizU0PV-9YkhKyVA">
+        </section>
+
+
+
+
+
+</section>
         <h1>ActualiWeb</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
+            <ul >
+                <li ><a href="index.html">Inicio</a></li>
                 <li><a href="noticia1.html">"Avances Revolucionarios en la Inteligencia Artificial: Implicaciones para el Futuro"</a></li>
                 <!-- Agrega más enlaces a otras noticias aquí -->
                 <li><a href="noticia2.html">¿Qué es la inteligencia artificial y cómo funciona?</a></li>
