modifique los index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="title__container">
                 <!-- <h2 class="title__hola">¡ActualiWeb!</h2>-->
                 <h3 class="title__soy">
-                    Es el sitio web de noticias tecnologícas que te ofrece lo último en innovación, ciencia, informática, videojuegos y
-                    más.<strong>Visita Actualiweb y descubre todo lo que la tecnología
+                    El sitio web de noticias tecnologícas que te ofrece lo último en innovación, ciencia, informática, videojuegos y
+                    más.<strong> <br>Visita Actualiweb y descubre todo lo que la tecnología
                     puede hacer por ti.</strong>
                 </h3>
                 <ul class="title__network">
@@ -98,6 +98,11 @@
                 <input type="text" id="Asunto" placeholder="Asunto" class="contacto__input">
                 <ul class="contacto__errores" id="errores-mensaje"></ul>
                 <textarea id="mensaje" class="contacto__input contacto__input-mensaje" rows="10" placeholder="Mensaje"></textarea>
+                <input id="rb1" type="radio" name="estudios">
+                <label for="rb1">Recibir información sobre IA</label>
+                <br>
+                <input id="rb2" type="radio" name="estudios">
+                <label for="rb2">No recibir informacion</label>
                 <input class="contacto__boton" type="button" value="Enviar Mensaje">
             </form>
         </div>
@@ -112,6 +117,7 @@
             <input type="email" id="email" name="email" required><br>
             <label for="mensaje">Mensaje:</label><br>
             <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br>
+            
             <button type="submit">Enviar</button>
         </form>
     </section>
@@ -150,7 +156,7 @@
     -->
     <footer class="footer">
         <div class="footer__contenedor">
-            <p class="footer__nombre">&copy; ActualiWeb</ p>
+            <p class="footer__nombre">&copy; ActualiWeb 2023</ p>
             <div class="footer__logos">
                 <a href="https://www.linkedin.com/in/" target="_blank" class="footer__logo">
                 <i class="fa-brands fa-linkedin-in"></i>
