--- a/noticia2.html
+++ b/noticia2.html
@@ -57,8 +57,20 @@
         <a href="index.html">Volver a la página principal</a>
     </article>
 
-    <footer>
-        <p>&copy; 2023 ActualiWeb</p>
+    <footer class="footer">
+        <div class="footer__contenedor">
+            <p class="footer__nombre">&copy; ActualiWeb 2023</ p>
+            <div class="footer__logos">
+                <a href="https://www.linkedin.com/in/" target="_blank" class="footer__logo">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                    LinkedIn
+                </a>
+                <a href="https://github.com/" target="_blank" class="footer__logo">
+                    <i class="fa-brands fa-github-alt"></i>
+                    GitHub
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 
